# Tide-Image-Hosting

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DELIVERY.md  Dockerfile  Dockerfile.runtime  OPTIMIZATION_SUMMARY.md  README.md  TEST_CHECKLIST.md  docker-compose.yml  start-optimized.sh
crates/server/: Cargo.toml
crates/server/src/: app.rs  auth.rs  error.rs  main.rs  models.rs  storage.rs
crates/server/src/routes/: admin.rs  ai.rs  auth.rs  images.rs  mod.rs  settings.rs  user.rs
crates/server/src/services/: audit.rs  bootstrap.rs  defaults.rs  images.rs  mod.rs  quota.rs  security.rs  storage_registry.rs  tasks.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/web/: Cargo.toml  Trunk.toml  index.html  style.css
crates/web/src/: components.rs  lib.rs  main.rs  state.rs  theme.rs
docs/: 00-潮汐图床-项目总览.md  01-潮汐图床-需求文档.md  02-潮汐图床-数据库设计.md  03-潮汐图床-接口文档.md  04-潮汐图床-前端页面清单.md  05-潮汐图床-存储适配器设计.md  06-潮汐图床-开发排期.md  07-潮汐图床-代码规范与交付标准.md  08-潮汐图床-后台性能与功能补齐优化方案.md
migrations/: 0001_initial.sql  0002_security_auth.sql  0003_tag_policy_defaults.sql  0004_chinese_visible_defaults.sql  0005_upload_remove_exif_default.sql  0006_api_token_ip_whitelist.sql  0007_audit_ai_enrichment_defaults.sql  0008_blue_white_theme_defaults.sql  0009_normal_user_auto_after_ai_audit.sql  0010_username_login_post_audit.sql  0011_admin_performance_indexes.sql  0012_storage_provider_soft_delete.sql  0013_storage_routes.sql  0014_remove_public_hosting_subtitle.sql  0015_oauth_accounts.sql
