[package]
name = "tide-web"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
console_error_panic_hook.workspace = true
gloo-file.workspace = true
gloo-net.workspace = true
gloo-storage.workspace = true
js-sys.workspace = true
leptos.workspace = true
serde.workspace = true
serde_json.workspace = true
tide-shared = { path = "../shared" }
urlencoding.workspace = true
uuid.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
